# tetris-mint

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
assets/: terminally-tetris-logo.xcf
cmake/Modules/: FindCurses.cmake
docs/: DEVELOP.md  WINDOWS.md  pre-commit
src/: .gitignore  CMakeLists.txt  Makefile  client.c  client_conn.c  client_conn.h  controller.c  controller.h  curses_combobox.c  curses_combobox.h  curses_text_entry.c  curses_text_entry.h  event.c  event.h  generic.c  generic.h  header.mak  list.c  list.h  log.c  log.h  message.c  message.h  offline.c  offline.h  os_compat.c  os_compat.h  party.c  party.h  player.c  player.h  render.c  render.h  server.c  solo-main  solo-main.c  solo_main.c  terminal_size.c  terminal_size.h  test-main  (+12 more)
test/: CMakeLists.txt  test_tetris_game.c
